--- a/MNIST_dataset.ipynb
+++ b/MNIST_dataset.ipynb
@@ -48,7 +48,7 @@
     "### MNIST Dataset\n",
     "---\n",
     "- MNIST dataset is a dataset of hand-written digits, 0 through 9.\n",
-    "- It contains 28x28 images of these hand-written didgits."
+    "- It contains 28×28 pixel grayscale images of handwritten single digits between 0 and 9"
    ]
   },
   {
